--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/elements": "^0.18.4",
+    "@clerk/nextjs": "^6.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/react-big-calendar": "^1.15.0",
@@ -19,14 +22,17 @@
     "moment": "^2.30.1",
     "next": "15.0.2",
     "next-themes": "^0.4.1",
+    "prisma": "^5.21.1",
     "react": "^18",
     "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -38,5 +44,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
